--- a/src/index.css
+++ b/src/index.css
@@ -91,8 +91,12 @@ nav {
     @apply flex-grow;
     @apply relative;
 
+
     /* position: relative; width: 100%; height: 0; padding-top: 80.0000%; padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden; border-radius: 8px; will-change: transform; */
     iframe {
-        position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;
+        position: absolute; width: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;
+
+        /* height: calc(100% - 58px); */
+        height: 100%;
     }
 }
